force-app/main/default/objects/Account/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <businessOwnerGroup>Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>PII</complianceGroup>
    <description>Created this to Address Line 2</description>
    <label>Address Line 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>