force-app/main/default/objects/Account/fields/Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_3__c</fullName>
    <businessOwnerGroup>Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>PII</complianceGroup>
    <description>Address Line 3</description>
    <inlineHelpText>Address Line 3</inlineHelpText>
    <label>Address Line 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>