force-app/main/default/objects/Account/fields/Billing_Language__c.field-meta.xml
<CustomField>
    <fullName>Billing_Language__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This specifies the primary Billing language of organization</description>
    <inlineHelpText>This specifies the primary Billing language of organization</inlineHelpText>
    <label>Billing Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Chinese (Simplified)</fullName>
            </value>
            <value>
                <fullName>Chinese (Traditional)</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Hebrew</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Turkish</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Bulgarian</fullName>
            </value>
            <value>
                <fullName>Croatian</fullName>
            </value>
            <value>
                <fullName>Czech</fullName>
            </value>
            <value>
                <fullName>Hungarian</fullName>
            </value>
            <value>
                <fullName>Polish</fullName>
            </value>
            <value>
                <fullName>Swedish</fullName>
            </value>
            <value>
                <fullName>Norwegian</fullName>
            </value>
            <value>
                <fullName>Danish</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>