force-app/main/default/objects/Account/fields/Buying_Entity__c.field-meta.xml
<CustomField>
    <fullName>Buying_Entity__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>To indicate if an organization can be a sold-to party</description>
    <label>Buying Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>