force-app/main/default/objects/Account/fields/Company_Email__c.field-meta.xml
<CustomField>
    <fullName>Company_Email__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This is primary email of an organization</description>
    <inlineHelpText>This is the MDM unique identifier</inlineHelpText>
    <label>Company Email</label>
    <type>Email</type>
</CustomField>