force-app/main/default/objects/Account/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>To store the county address information of an organization</description>
    <label>County</label>
    <length>15</length>
    <type>Text</type>
</CustomField>