force-app/main/default/objects/Account/fields/Doing_Business_As_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Doing_Business_As_Name_2__c</fullName>
    <businessOwnerGroup>Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>PII</complianceGroup>
    <description>Alias Name 2 for Organization</description>
    <label>Doing Business As Name 2</label>
    <length>35</length>
    <type>Text</type>
</CustomField>