force-app/main/default/objects/Account/fields/Doing_Business_As_Name__c.field-meta.xml
<CustomField>
    <fullName>Doing_Business_As_Name__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Alias name for an organization</description>
    <label>Doing Business As Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>