force-app/main/default/objects/Account/fields/End_Users_allowed_to_use_WebShop__c.field-meta.xml
<CustomField>
    <fullName>End_Users_allowed_to_use_WebShop__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This is to specify if customers can webshop</description>
    <inlineHelpText>This is to specify if customers can webshop</inlineHelpText>
    <label>End Users allowed to use WebShop</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>