force-app/main/default/objects/Account/fields/Exclusion_Flag__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Flag__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>To exclude the territory assignment rules and assign the TM manually</description>
    <label>Exclusion Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>