force-app/main/default/objects/Account/fields/Expiration_date_of_business_license__c.field-meta.xml
<CustomField>
    <fullName>Expiration_date_of_business_license__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This field is specific to China</description>
    <inlineHelpText>This field is specific to China</inlineHelpText>
    <label>Expiration date of business license</label>
    <type>Date</type>
</CustomField>