force-app/main/default/objects/Account/fields/Expiration_date_of_medical_practicing_li__c.field-meta.xml
<CustomField>
    <fullName>Expiration_date_of_medical_practicing_li__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This field is specific to China</description>
    <inlineHelpText>Expiration date of medical practicing license</inlineHelpText>
    <label>Expiration date of medical practice</label>
    <type>Date</type>
</CustomField>