force-app/main/default/objects/Account/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This field has the Invoice date</description>
    <inlineHelpText>This field has the Invoice date</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>