force-app/main/default/objects/Account/fields/Invoice_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Frequency__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This field has the Invoice frequency</description>
    <inlineHelpText>This field has the Invoice frequency</inlineHelpText>
    <label>Invoice Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>EPT-Monthly</fullName>
            </value>
            <value>
                <fullName>Per Shipment</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Three Years</fullName>
            </value>
            <value>
                <fullName>Five Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>