force-app/main/default/objects/Account/fields/Invoice_Preference__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Preference__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>To identify the preference of an organization</description>
    <label>Invoice Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Opt-out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>