force-app/main/default/objects/Account/fields/Legal_Company_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Legal_Company_Name_2__c</fullName>
    <businessOwnerGroup>Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>PII</complianceGroup>
    <description>This field has Name used for the organization</description>
    <inlineHelpText>This field has Name used for the organization</inlineHelpText>
    <label>Legal Company Name 2</label>
    <length>35</length>
    <type>Text</type>
</CustomField>