force-app/main/default/objects/Account/fields/MDM_Id__c.field-meta.xml
<CustomField>
    <fullName>MDM_Id__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This is the MDM unique identifier</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the MDM unique identifier</inlineHelpText>
    <label>MDM Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>