force-app/main/default/objects/Account/fields/Native_Address__c.field-meta.xml
<CustomField>
    <fullName>Native_Address__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This field has Native address for Specific markets for the organization</description>
    <inlineHelpText>This field has Native address for Specific markets for the organization</inlineHelpText>
    <label>Native Address</label>
    <type>Address</type>
</CustomField>