force-app/main/default/objects/Account/fields/Native_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Native_Address_Line_3__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Native Address Line 3</description>
    <inlineHelpText>Native Address Line 3</inlineHelpText>
    <label>Native Address Line 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>