force-app/main/default/objects/Account/fields/Native_Doing_Business_As_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Native_Doing_Business_As_Name_2__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Native Alias name 2 for specific markets</description>
    <label>Native Doing Business As Name 2</label>
    <length>35</length>
    <type>Text</type>
</CustomField>