force-app/main/default/objects/Account/fields/Native_Doing_Business_As_Name__c.field-meta.xml
<CustomField>
    <fullName>Native_Doing_Business_As_Name__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Native Alias Name for specific markets</description>
    <label>Native Doing Business As Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>