force-app/main/default/objects/Account/fields/Native_Legal_Company_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Native_Legal_Company_Name_2__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Translated company name 2 for specific markets</description>
    <label>Native Legal Company Name 2</label>
    <length>35</length>
    <type>Text</type>
</CustomField>