force-app/main/default/objects/Account/fields/Native_Legal_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Native_Legal_Company_Name__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Translated Legal Company name for specific markets</description>
    <label>Native Legal Company Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>