force-app/main/default/objects/Account/fields/Neighborhood_Code__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood_Code__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This field is specific to Brazil country</description>
    <inlineHelpText>This field is specific to Brazil country</inlineHelpText>
    <label>Neighborhood Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>