force-app/main/default/objects/Account/fields/Operating_Units__c.field-meta.xml
<CustomField>
    <fullName>Operating_Units__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Operating Unit</description>
    <label>Operating Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4020_exocad_Gmbh</fullName>
            </value>
            <value>
                <fullName>4050_exocad_America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>