force-app/main/default/objects/Account/fields/Organization_type__c.field-meta.xml
<CustomField>
    <fullName>Organization_type__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This field describes the type of organization</description>
    <inlineHelpText>This field describes the type of organization</inlineHelpText>
    <label>Organization type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dental Practice</fullName>
            </value>
            <value>
                <fullName>Group Purchasing Organization</fullName>
            </value>
            <value>
                <fullName>Management Company</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Education Institution</fullName>
            </value>
            <value>
                <fullName>Production Center</fullName>
            </value>
            <value>
                <fullName>Dental Lab</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Administrative Services Company</fullName>
            </value>
            <value>
                <fullName>Imaging Center</fullName>
            </value>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
            <value>
                <fullName>System Integrator</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Technology Partner</fullName>
            </value>
            <value>
                <fullName>Corporate office</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>