force-app/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This field has the Payment terms of organization</description>
    <inlineHelpText>TThis field has the Payment terms of organization</inlineHelpText>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NT30</fullName>
            </value>
            <value>
                <fullName>NT45</fullName>
            </value>
            <value>
                <fullName>NT60</fullName>
            </value>
            <value>
                <fullName>NT90</fullName>
            </value>
            <value>
                <fullName>NT6M</fullName>
            </value>
            <value>
                <fullName>EM30</fullName>
            </value>
            <value>
                <fullName>EM60</fullName>
            </value>
            <value>
                <fullName>IN6M</fullName>
            </value>
            <value>
                <fullName>IN1Y</fullName>
            </value>
            <value>
                <fullName>NT4M</fullName>
            </value>
            <value>
                <fullName>IT1Y</fullName>
            </value>
            <value>
                <fullName>NT5M</fullName>
            </value>
            <value>
                <fullName>NT7M</fullName>
            </value>
            <value>
                <fullName>NT8M</fullName>
            </value>
            <value>
                <fullName>NT9M</fullName>
            </value>
            <value>
                <fullName>N10M</fullName>
            </value>
            <value>
                <fullName>N11M</fullName>
            </value>
            <value>
                <fullName>I11M</fullName>
            </value>
            <value>
                <fullName>N12M</fullName>
            </value>
            <value>
                <fullName>NT15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>