force-app/main/default/objects/Account/fields/Status_change_reason__c.field-meta.xml
<CustomField>
    <fullName>Status_change_reason__c</fullName>
    <businessOwnerGroup>Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>None</complianceGroup>
    <description>This field specifies the reason for change in status of an organization</description>
    <inlineHelpText>This field specifies the reason for change in status of an organization</inlineHelpText>
    <label>Status change reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Business Closed</fullName>
            </value>
            <value>
                <fullName>Violation of Policy</fullName>
            </value>
            <value>
                <fullName>Legal or Regulatory Compliance</fullName>
            </value>
            <value>
                <fullName>Inactivity</fullName>
            </value>
            <value>
                <fullName>Business Decision</fullName>
            </value>
            <value>
                <fullName>Customer Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>