force-app/main/default/objects/Account/fields/Status_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Update_Date__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>To Store the status updated date as part of audit</description>
    <label>Status Update Date</label>
    <type>Date</type>
</CustomField>