force-app/main/default/objects/Account/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This field shall store the timestamp when the latest KAFKA request is received</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>