force-app/main/default/objects/Account/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>To store the KAFKA unique Id</description>
    <label>UUID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>