force-app/main/default/objects/Account/fields/VIES_Validation_Result__c.field-meta.xml
<CustomField>
    <fullName>VIES_Validation_Result__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This field stores the VAT validation result</description>
    <inlineHelpText>This field stores the VAT validation result</inlineHelpText>
    <label>VIES Validation Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VIES P</fullName>
            </value>
            <value>
                <fullName>VIES F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>